// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
      >
        <fieldset
          class="uv_l0r03j0"
        >
          <div
            class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5p uv_toi52u5v"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
            >
              <legend
                class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            >
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u31 uv_toi52u5j uv_toi52u5v"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh5d uv_x6hyh52j"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow23"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w23 uv_adn1w25"
                >
                  <input
                    aria-invalid="false"
                    class="uv_adn1w28"
                    id="_r_1_"
                    name="Group.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u31 uv_toi52u5j uv_toi52u5v"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh5d uv_x6hyh52j"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow23"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w23 uv_adn1w25"
                >
                  <input
                    aria-invalid="false"
                    class="uv_adn1w28"
                    id="_r_4_"
                    name="Group.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`groupField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
      >
        <fieldset
          class="uv_l0r03j0"
        >
          <div
            class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5p uv_toi52u5v"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
            >
              <div
                class="uv_toi52u0 uv_toi52uv uv_toi52u2j uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <legend
                  class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23"
                >
                  ToggleGroupField events
                </legend>
                <span
                  class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owc uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow1n"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            >
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u31 uv_toi52u5j uv_toi52u5v"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh5d uv_x6hyh52j"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow23"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w25"
                >
                  <input
                    aria-invalid="true"
                    class="uv_adn1w28"
                    id="_r_9_"
                    name="test.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u31 uv_toi52u5j uv_toi52u5v"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh5d uv_x6hyh52j"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow23"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w25"
                >
                  <input
                    aria-invalid="true"
                    class="uv_adn1w28"
                    id="_r_c_"
                    name="test.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
        <p
          class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9owa uv_m4c9owc uv_m4c9owk uv_m4c9owm uv_m4c9owp uv_m4c9ow1q"
        >
          This field is required
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
